@@ -83,7 +83,7 @@
 #define FEATURE_IO_ASSIST
 #define FEATURE_LINKAGE_STACK
 #define FEATURE_LOAD_REVERSED
-//#define FEATURE_LOAD_STORE_ON_CONDITION_FACILITY                /*810*/
+#define FEATURE_LOAD_STORE_ON_CONDITION_FACILITY                /*810*/
 #define FEATURE_LOCK_PAGE
 #define FEATURE_LONG_DISPLACEMENT
 #define FEATURE_MESSAGE_SECURITY_ASSIST
